@@ -171,7 +171,7 @@ b7a78a3cd4dabb523b8738f64913afe3277552fb7a2150397b93307c89d24964  iperf2-2.0.9.t
 254a352d6e7dfca5a8801259616d9c3ab1ad6b708bf98d4abd96f71d76b364f3  crmsh-master_20180520.tar.xz
 62a31a1d24e8dfb5bb2b14cd5ed5964445e840985ce370ed70116f31ca5e93f9  nmon-16c.tar.gz
 b0b0fec8ca15ffc30e310b8acccb8f87f17239605997d8c6f171cf6c6da93ebe  linux_firmware-master_20180524.tar.xz
-5b5cd0dd49abdd614206048a8e61f3b557ba71b3827e0647ebf5e4af57b1c177  scst-3.3.x_r7899.tar.xz
+70159a8771ab122c25d8d9cb7923029263f46f4344109da6381bc23ec72c84ee  scst-3.3.x_r7960.tar.xz
 2c8f46e17121bc1c422f42f37be752bf918c802db843cc9c2eeda2a5fa9f1a7d  munin-c-0.0.9.tar.gz
 d0071bf00fdf6591cd6ea5caf89fa57ada03d263da1f80f17deff76acf7419e1  open-iscsi-2.0.874.tar.gz
 487fd0d87826423ea99dc159826d0b654a5da016ed670d4395a77bfa4f62e2ec  open-isns-0.96.tar.gz
@@ -204,6 +204,6 @@ e6b2aca70ccc3fe3687365009dd94a2e18e82b688ed4e260e04b7412471cc173  dosfstools-4.1
 a0d9b27d773c3458520e14279e14caa4fb23cc42b0527f6aa20eafa7a80d6446  blktrace-master_20181015.tar.xz
 14457d70e6f98ee9eb3f2940000da4bac99909a49560ef2fdf4eacd286410cde  hwloc-2.0.2.tar.bz2
 dbd4bd1aee320a5a86e79624cbc29e8b3235ff8028ab8566e080ed7910535c42  mstflint-4.11.0.tar.gz
-fbeedfed8399868ed8503522ad51363776424e4cbd9e264849fc445250f980ef  switchtec-kernel_20190126.tar.xz
+a52624c9a489328d578ead72d43f058adc525a4aac336853403dd8d049d6627e  switchtec-kernel_20190215.tar.xz
 aa8cb2eebf36e9e46dfc227f24784aa8c87181ec96e57ee6c455da8a0ce4fa77  lshw-B.02.18.tar.gz
 2b7286e58d94af3839a3dffb11d8d99e169d6e97f2c43b1073f55357209cff5b  iozone3-487.tar.xz
